--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -17,12 +17,15 @@
         android:background="@drawable/background_juego">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="234dp"
+            android:layout_height="80dp"
             android:text="Ir A"
             android:id="@+id/pagina"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp" />
+            android:layout_marginTop="100dp"
+            android:background="@drawable/games"
+            android:textColor="#511dab"
+            android:textSize="40dp" />
 
     </LinearLayout>
 </RelativeLayout>
