--- a/app/src/main/res/layout/activity_despedida.xml
+++ b/app/src/main/res/layout/activity_despedida.xml
@@ -17,46 +17,49 @@
         android:background="@drawable/background_juego">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/boton_a"
+            android:layout_height="@dimen/boton_b"
             android:text="Volver"
             android:id="@+id/back"
             android:layout_gravity="center_horizontal" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/boton_a"
+            android:layout_height="@dimen/boton_b"
             android:text="Salir"
             android:id="@+id/despe"
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/texto_a"
+            android:layout_height="@dimen/texto_b"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_size"
             android:text="Large Text"
             android:id="@+id/despete"
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/texto_a"
+            android:layout_height="@dimen/texto_b"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_size"
             android:text="Large Text"
             android:id="@+id/despe1"
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/texto_a"
+            android:layout_height="@dimen/texto_b"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_size"
             android:text="Large Text"
             android:id="@+id/despe3"
             android:layout_gravity="center_horizontal" />
 
         <ImageView
-            android:layout_width="164dp"
-            android:layout_height="139dp"
+            android:layout_width="@dimen/yoda_w"
+            android:layout_height="@dimen/yoda_h"
             android:id="@+id/imageView2"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/arenusca" />
