--- a/app/src/main/res/layout/activity_menu_actividad.xml
+++ b/app/src/main/res/layout/activity_menu_actividad.xml
@@ -12,107 +12,80 @@
     android:weightSum="1">
 
     <ImageView
-
-        android:layout_width="125dp"
-
-    android:layout_height="106dp"
-
+        android:layout_width="@dimen/yoda_w"
+    android:layout_height="@dimen/yoda_h"
     android:src="@drawable/arenusca"
-
     android:layout_gravity="center"/>
 
     <TextView
-
     style="@style/Texto_introductorio"
-
     android:text="@string/welcome1"
-
     android:textAllCaps="false"
-
     android:fontFamily="sans-serif"
-
-    android:textSize="20dp"
-
+        android:textSize="@dimen/text_size"
     android:textColor="#003366"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_weight="0.35" />
+        android:layout_gravity="center"
+        android:layout_width="@dimen/texto_a"
+        android:layout_height="@dimen/texto_b"
+
+        android:layout_weight="0.56" />
 
     <TextView
-
-    style="@style/Texto_introductorio"
-
+            style="@style/Texto_introductorio"
     android:text="@string/welcome2"
-
     android:id="@+id/go"
-
+        android:layout_gravity="center"
     android:textAllCaps="false"
-
     android:fontFamily="sans-serif"
-
-    android:textSize="24dp"
-
+        android:layout_width="@dimen/texto_a"
+        android:layout_height="wrap_content"
+    android:textSize="@dimen/text_size"
     android:textColor="#003366"/>
 
     <LinearLayout
 
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-
     android:orientation="vertical"
         android:weightSum="1">
 
     <Button
 
     style="@style/Botones_menu"
-
     android:text="Jugar"
-
     android:id="@+id/btn_jugar"
-
     android:background="#bada55"
-
     android:padding="15dp"
-
     android:layout_gravity="center"
-        android:layout_width="176dp"
-        android:layout_height="wrap_content"
-        android:textSize="25dp" />
+        android:layout_width="@dimen/boton_a"
+        android:layout_height="@dimen/boton_b"
+        android:textSize="@dimen/text_size" />
 
     <Button
 
     style="@style/Botones_menu"
 
     android:text="Resultados"
-
     android:id="@+id/btn_resultados"
-
     android:background="#7aaee6"
-
     android:padding="15dp"
-
     android:layout_gravity="center"
-        android:layout_width="163dp"
-        android:layout_height="wrap_content"
-        android:textSize="25dp" />
+        android:layout_width="@dimen/boton_a"
+        android:layout_height="@dimen/boton_b"
+        android:textSize="@dimen/text_size" />
 
     <Button
 
     style="@style/Botones_menu"
 
     android:text="Otros juegos"
-
     android:id="@+id/btn_ajustes"
-
     android:background="#ff88ae"
-
     android:padding="15dp"
-
     android:layout_gravity="center"
-        android:layout_width="169dp"
-        android:layout_height="wrap_content"
-        android:textSize="25dp" />
+        android:layout_width="@dimen/boton_a"
+        android:layout_height="@dimen/boton_b"
+        android:textSize="@dimen/text_size" />
 
     </LinearLayout>
 
