--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
+            android:textSize="@dimen/text_size"
             android:id="@+id/txto1"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.63" />
